--- a/src/styles/global/globals.css
+++ b/src/styles/global/globals.css
@@ -83,6 +83,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+}
+
+ul, li {
+  list-style-type: none;
 }
 
 body {
