--- a/src/styles/pages/MainPage.module.scss
+++ b/src/styles/pages/MainPage.module.scss
@@ -1,3 +1,22 @@
+@import "../global/colors.scss";
+
+.top10 {
+    &__title {
+        display: flex;
+        gap: 8px;
+        margin-bottom: 16px;
+    }
+
+    &__name {
+        font-size: 24px;
+        line-height: 28px;
+        font-weight: 700;
+        font-style: normal;
+        color: $color-white;
+    }
+}
+
+//////
 .main {
     display: flex;
     flex-direction: column;
