--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -59,6 +59,20 @@
     }
 }
 
+@media (max-width: 1160px) {
+    .header {
+        .header_body {
+            .header_content {
+                .header_content_first {
+                    nav {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 600px) {
     .header {
         width: 100%;
