--- a/src/styles/components/footer/Footer.module.scss
+++ b/src/styles/components/footer/Footer.module.scss
@@ -10,12 +10,13 @@
         height: 1px;
         background: rgb(255, 0, 0);
     }
-    .footer_first_content {
+    .footer_first_container {
         width: 1240px;
         padding-top: 48px;
         display: flex;
         justify-content: space-between;
         ul {
+            width: 25%;
             padding: 0px 12px 0px 12px;
             font-size: 15px;
             font-weight: 700;
@@ -40,7 +41,104 @@
                 -webkit-text-fill-color: transparent;
             }
         }
+        .footer_third_content {
+            width: 25%;
+            font-size: 15px;
+            line-height: 20px;
+            font-style: normal;
+            .third_content_title {
+                display: block;
+                color: #fff;
+                font-weight: 700;
+                margin-bottom: 8px;
+            }
+            span {
+                display: block;
+                width: 250px;
+                color: rgba(255,255,255,.48);
+                font-weight: 400;
+            }
+            button {
+                width: 196px;
+                height: 40px;
+                font-weight: 500;
+                font-size: 15px;
+                background-color: #1f1b2e;
+                border: none;
+                color: #fff;
+                border-radius: 8px;
+                margin-top: 20px;
+                cursor: pointer;
+            }
+            button:hover {
+                background-color: #2e2844;
+            }
+            .third_content_buttons {
+                margin-top: 10px;
+                button {
+                    width: 40px;
+                    height: 40px;
+                    margin-right: 12px;
+                    margin-top: 0px;
+                    img {
+                        width: 16px;
+                        height: 16px;
+                    }
+                }
+            }
+            a {
+                display: block;
+                margin-top: 10px;
+                color: #fff;
+                font-size: 100%;
+            }
+            a:hover {
+                color: rgba(255,255,255,.72);
+            }
+            p {
+                color: rgba(255,255,255,.48);
+                font-weight: 400;
+                font-size: 15px
+            }
+        }
+        .footer_fourth_content {
+            width: 25%;
+            a {
+                width: 256px;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                button {
+                    cursor: pointer;
+                    width: 104px;
+                    height: 104px;
+                    margin: 0px auto;
+                    border-radius: 20px;
+                    border: none;
+                    --start-gradient-color: #A869F0;
+                    --end-gradient-color: #834CC2;
+                    --shadow-color: #A869F0; 
+                    background: linear-gradient(180deg,var(--start-gradient-color) 0%,var(--end-gradient-color) 100%);
+                    box-shadow: 0 0 104px var(--shadow-color); 
+                    img {
+                        width: 56px;
+                        height: 56px;
+                    }
+                }
+                span {
+                    width: 256px;
+                    margin-top: 24px;
+                    font-size: 15px;
+                    line-height: 20px;
+                    font-weight: 400;
+                    font-style: normal;
+                    color: #a5a1b2;
+                    text-align: center;
+                }
+            }
+        }
     }
+
 }
 
 
