--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -26,6 +26,9 @@
                         a {
                             margin-right: 16px;
                         } 
+                        a:hover {
+                            color: white
+                        } 
                         a:last-child {
                             margin-right: 0px;
                         }  
