--- a/src/styles/components/ImageCarousel.module.scss
+++ b/src/styles/components/ImageCarousel.module.scss
@@ -5,6 +5,7 @@
     width: 100%;
     flex-direction: row;
     align-items: stretch;
+    gap: 12px;
 }
 
 .replacement {
@@ -31,6 +32,7 @@
 .gallery {
     max-width: 1216px;
     overflow: hidden;
+    padding-top: 12px;
     @media (max-width: 1279px) {
         width: 100%;
     }
