--- a/src/styles/components/Top10Card.module.scss
+++ b/src/styles/components/Top10Card.module.scss
@@ -4,24 +4,27 @@
     max-width: 224px;
     position: relative;
     transition-duration: 0.4s;
-    padding-bottom: 20px;
+    padding-bottom: 35px;
     &:hover {
         transform: scale(1.04);
     }
 }
 
+.image {
+    position: relative;
+    & img {
+        width: 100%;
+        border-radius: 8px 8px 0 0;
+    }
+}
+
 .gradient {
-    background-image: linear-gradient(0deg, black, rgba(16, 14, 25, 0));
+    background-image: linear-gradient(0deg, #100e19, rgba(16, 14, 25, 0));
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 50%;
-}
-
-.image {
-    width: 100%;
-    border-radius: 8px 8px 0 0;
 }
 
 .name {
@@ -33,9 +36,16 @@
     margin-bottom: 30px;
 }
 
-.number {
+.numbers {
+    display: flex;
+    justify-content: center;
     height: 66px;
-    left: 40%;
     position: absolute;
     bottom: 0;
+    width: 100%;
+    & img {
+        &:not(:first-child) {
+            margin-left: -10px;
+        }
+    }
 }
