--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 72px;
-    background-color: rgb(0, 0, 0,);
+    background: transparent;
     display: flex;
     justify-content: center;
     .header_body {
