--- a/src/styles/global/colors.scss
+++ b/src/styles/global/colors.scss
@@ -1,3 +1,8 @@
 $color-white: white;
 $color-white-48: rgba(255, 255, 255, 0.48);
 $color-white-72: rgba(255, 255, 255, 0.72);
+$color-black-background:#100e19;
+$color-black-button:#1f1b2e;
+$color-black-button-hover:#2e2844;
+$color-red-button:#ea003d;
+$color-frame-background: #100e19;
