--- a/src/styles/components/footer/Footer.module.scss
+++ b/src/styles/components/footer/Footer.module.scss
@@ -212,7 +212,7 @@
           height: 40px;
           background-color: #1f1b2e;
           border-radius: 20px;
-          border-width: 2px;
+          border: 2px solid #1f1b2e;
           display: flex;
           justify-content: center;
           align-items: center;
