--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -1,9 +1,12 @@
+@import "../../global/colors.scss";
+
 .header {
   width: 100%;
   height: 72px;
   background: transparent;
   display: flex;
   justify-content: center;
+  position: relative;
   .header_body {
     width: 1240px;
     height: 100%;
@@ -20,12 +23,16 @@
         align-items: center;
         font-size: 15px;
         height: 100%;
+        img {
+          z-index: 2;
+        }
         nav {
           margin-left: 32px;
           ul {
             display: flex;
             a {
               margin-right: 16px;
+              z-index: 2;
             }
             a:hover {
               color: white;
@@ -40,28 +47,51 @@
         display: flex;
         align-items: center;
         height: 100%;
-        /* button {
-                    width: 182px;
-                    height: 32px;
-                    background-color: #ea003d;
-                    color: white;
-                    border: 0px;
-                    border-radius: 8px;
-                    font-size: 13px;
-                    font-weight: 500;
-                } */
-        /* img {
-          width: 20px;
-          height: 20px;
-          margin-left: 20px;
-        } */
-       /*  img:last-child {
-          width: 22px;
-          height: 22px;
-        } */
+        a,
+        button, div {
+          z-index: 2;
+        }
+       
       }
     }
   }
+
+  .header__notVisible {
+    --menuTransition: 250ms;
+    background: $color-black-button;
+    border-radius: 12px;
+    box-shadow: 0 20px 96px #12101b;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    transform: translateY(0);
+    transition-delay: 0s;
+    transition-duration: var(--menuTransition);
+    transition-property: visibility, opacity, height;
+    transition-timing-function: ease-out;
+    visibility: hidden;
+    width: 100%;
+    will-change: transform, height;
+    z-index: -2;
+    hr {
+      width: 100%;
+      border-color: $color-black-button;
+      position: absolute;
+      left: 0;
+      top: 72px;
+      z-index: 1;
+    }
+  }
+  .header__visible {
+    opacity: 1;
+    overflow: hidden;
+    transform: translateY(4px);
+    visibility: visible;
+    min-height: 350px;
+    z-index: 1;
+  }
+
 }
 
 @media (max-width: 1160px) {
@@ -100,6 +130,7 @@
           img {
             width: 55px;
             height: 40px;
+            z-index: 2;
           }
         }
         .header_content_second {
