--- a/src/styles/components/reusedСomponents/HeaderBody.module.scss
+++ b/src/styles/components/reusedСomponents/HeaderBody.module.scss
@@ -1,31 +1,80 @@
 @import "../../global/colors.scss";
 
-
 .notification {
   position: absolute;
-  top: 75px;
+  top: 0;
   left: 0;
   width: 100%;
-  height: 275px;
+  padding-top: 72px;
+  height: 100%;
   color: $color-white-48;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  svg{
+  svg {
     width: 56px;
     height: 56px;
     margin-bottom: 30px;
+    z-index: -1;
+  }
+  p {
+    z-index: -1;
   }
 }
 
 .login {
-    position: absolute;
-    top: 75px;
-    left: 0;
-    width: 100%;
-    height: 275px;
-    color: $color-white-48;
-  
-   
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 460px;
+  width: 100%;
+  color: $color-white-48;
+  border-top: 3px solid $color-black-button-hover;
+}
+
+.movies {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 460px;
+  width: 100%;
+  color: $color-white-48;
+  border-top: 3px solid $color-black-button-hover;
+  display: flex;
+  padding: 104px 32px 32px 32px;
+}
+
+.series {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 460px;
+  width: 100%;
+  color: $color-white-48;
+  border-top: 3px solid $color-black-button-hover;
+  display: flex;
+  padding: 104px 32px 32px 32px;
+}
+
+.cartoons {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 460px;
+  width: 100%;
+  color: $color-white-48;
+  border-top: 3px solid $color-black-button-hover;
+  display: flex;
+  padding: 104px 32px 32px 32px;
+}
+
+.tv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 350px;
+  color: $color-white-48;
+  border-top: 3px solid $color-black-button-hover;
+}
