--- a/src/styles/components/ImageCarousel.module.scss
+++ b/src/styles/components/ImageCarousel.module.scss
@@ -4,27 +4,43 @@
     width: 100vw;
     overflow: hidden;
     position: relative;
+    &__area {
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        z-index: 2;
+        &_left {
+            left: 0;
+        }
+        &_right {
+            right: 0;
+        }
+    }
     &__gallery {
         display: flex;
         flex-direction: row;
         gap: 16px;
         width: 100vw;
-    }
-    &__item {
-        transition-duration: 0.4s;
-        mask-image: linear-gradient(
-            rgba(31, 27, 46, 0.72),
-            rgba(31, 27, 46, 0.72)
-        );
-        &_active {
-            mask-image: none;
+        & li {
+            position: relative;
         }
+    }
+    &__dimmer {
+        background-color: black;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        content: "";
+        top: 0;
+        left: 0;
+        z-index: 10;
+        border-radius: 26px;
+        opacity: 0.5;
     }
     &__arrow {
         position: absolute;
-        top: calc(50% - 16px);
+        //top: calc(50% - 16px);
         z-index: 2;
-
         &_right {
             right: calc((100vw - 1216px) / 2 - 16px * 3);
         }
@@ -39,6 +55,10 @@
     width: 100%;
     flex-direction: row;
     align-items: stretch;
+    &__replacement {
+        height: inherit;
+        width: 20px;
+    }
     &__gallery {
         max-width: 1216px;
         overflow: hidden;
@@ -57,11 +77,6 @@
     }
 }
 
-.replacement {
-    height: inherit;
-    width: 20px;
-}
-
 .arrow {
     height: inherit;
     cursor: pointer;
@@ -73,6 +88,9 @@
         font-size: 32px;
         transition-duration: 0.4s;
         &:hover {
+            color: $color-white;
+        }
+        &_hover {
             color: $color-white;
         }
     }
