--- a/src/styles/components/PromoCard.module.scss
+++ b/src/styles/components/PromoCard.module.scss
@@ -1,10 +1,12 @@
 .container {
     position: relative;
     z-index: 1;
+    width: 1216px;
 }
 
 .image {
     border-radius: 26px;
+    width: 100%;
 }
 
 .description {
