--- a/src/styles/components/reusedСomponents/Button.module.scss
+++ b/src/styles/components/reusedСomponents/Button.module.scss
@@ -41,7 +41,7 @@
   align-items: center;
   z-index: 2;
   cursor: pointer;
-  
+
   img {
     width: 16px;
     height: 16px;
@@ -86,5 +86,76 @@
     svg {
       color: $color-white;
     }
+  }
+}
+
+.trailer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:$color-white-08;
+  border: none;
+  padding: 10px 12px;
+  height: 40px;
+  border-radius: 8px;
+  margin-right: 15px;
+  cursor: pointer;
+  transition-duration:.4s;
+
+  svg {
+    color: $color-white-80;
+    margin-right: 5px;
+  }
+
+  p {
+    color: $color-white-80;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 500;
+    font-style: normal;
+  }
+  &:hover {
+    background-color:$color-white-16;
+  }
+}
+
+.bookmark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-white-08;
+  border: none;
+  height: 40px;
+  padding: 10px 12px;
+  border-radius: 8px;
+  margin-right: 15px;
+  cursor: pointer;
+  transition-duration:.4s;
+
+  svg {
+    color: $color-white-80;
+  }
+  &:hover {
+    background-color:$color-white-16;
+  }
+}
+
+.share {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-white-08;
+  border: none;
+  padding: 10px 12px;
+  height: 40px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition-duration:.4s;
+
+  svg {
+    color: $color-white-80;
+  }
+  &:hover {
+    background-color:$color-white-16;
   }
 }
