--- a/src/styles/global/colors.scss
+++ b/src/styles/global/colors.scss
@@ -6,3 +6,8 @@ $color-black-button:#1f1b2e;
 $color-black-button-hover:#2e2844;
 $color-red-button:#ea003d;
 $color-frame-background: #100e19;
+$color-white-08:rgba(255,255,255,.08);
+$color-white-16:rgba(255,255,255,.16);
+$color-white-80:rgba(255,255,255,.8);
+$color-white-24:rgba(255, 255, 255, .24);
+$color-white-40:rgba(255, 255, 255, .4);
