--- a/src/styles/components/ImageCarousel.module.scss
+++ b/src/styles/components/ImageCarousel.module.scss
@@ -1,7 +1,7 @@
 @import "../global/colors.scss";
 
-.single {
-    width: 100vw;
+.s-carousel {
+    width: 100%;
     overflow: hidden;
     position: relative;
     &__area {
@@ -21,21 +21,13 @@
         flex-direction: row;
         gap: 16px;
         width: 100vw;
-        & li {
-            position: relative;
-        }
     }
-    &__dimmer {
-        background-color: black;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        content: "";
-        top: 0;
-        left: 0;
-        z-index: 10;
-        border-radius: 26px;
-        opacity: 0.5;
+    &__item {
+        position: relative;
+        filter: brightness(40%);
+        &_light {
+            filter: none;
+        }
     }
     &__arrow {
         position: absolute;
@@ -43,14 +35,20 @@
         z-index: 2;
         &_right {
             right: calc((100vw - 1216px) / 2 - 16px * 3);
+            @media (max-width: 1349px) {
+                right: 10px;
+            }
         }
         &_left {
             left: calc((100vw - 1216px) / 2 - 16px * 3);
+            @media (max-width: 1349px) {
+                left: 10px;
+            }
         }
     }
 }
 
-.multiple {
+.m-carousel {
     display: inline-flex;
     width: 100%;
     flex-direction: row;
@@ -64,7 +62,7 @@
         overflow: hidden;
         padding-top: 12px;
         @media (max-width: 1279px) {
-            width: 100%;
+            width: 100vw;
         }
         & ul {
             width: 9999px;
@@ -86,12 +84,18 @@
     &__icon {
         color: $color-white-72;
         font-size: 32px;
-        transition-duration: 0.4s;
+        transition-duration: 0.2s;
         &:hover {
             color: $color-white;
         }
         &_hover {
             color: $color-white;
+        }
+        &:active {
+            transform: scale(0.8);
+        }
+        &_active {
+            transform: scale(0.8);
         }
     }
 }
