--- a/src/styles/components/PromoCard.module.scss
+++ b/src/styles/components/PromoCard.module.scss
@@ -1,12 +1,16 @@
 .container {
     position: relative;
     z-index: 1;
-    width: 1216px;
 }
 
 .image {
     border-radius: 26px;
-    width: 100%;
+    width: 100vw;
+    max-width: 1216px;
+    @media (max-width: 599px) {
+        height: 60vh;
+        object-fit: cover;
+    }
 }
 
 .description {
@@ -15,6 +19,11 @@
     bottom: 0;
     margin-bottom: 32px;
     margin-left: 32px;
+    @media (max-width: 599px) {
+        width: 90%;
+        margin-bottom: 28px;
+        text-align: center;
+    }
 }
 
 .title {
@@ -24,6 +33,18 @@
     line-height: 56px;
     color: #fff;
     margin-bottom: 8px;
+    @media (max-width: 1271px) {
+        font-size: 40px;
+        line-height: 44px;
+    }
+    @media (max-width: 919px) {
+        font-size: 32px;
+        line-height: 36px;
+    }
+    @media (max-width: 711px) {
+        font-size: 28px;
+        line-height: 32px;
+    }
 }
 
 .synopsis {
@@ -31,4 +52,12 @@
     line-height: 22px;
     color: #fff;
     margin-bottom: 24px;
+    @media (max-width: 919px) {
+        font-size: 13px;
+        line-height: 18px;
+    }
+    @media (max-width: 599px) {
+        font-size: 15px;
+        line-height: 20px;
+    }
 }
