update film page

--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -1,7 +1,8 @@
 @import "../../global/colors.scss";
 
 .header {
-  width: 100%;
+  width: 1240px;
+  margin: 0 auto;
   height: 72px;
   background: transparent;
   display: flex;
