--- a/src/styles/global/colors.scss
+++ b/src/styles/global/colors.scss
@@ -5,9 +5,12 @@ $color-black-background:#100e19;
 $color-black-button:#1f1b2e;
 $color-black-button-hover:#2e2844;
 $color-red-button:#ea003d;
+$color-red-button-hover:#ff0f4d;
 $color-frame-background: #100e19;
 $color-white-08:rgba(255,255,255,.08);
 $color-white-16:rgba(255,255,255,.16);
 $color-white-80:rgba(255,255,255,.8);
 $color-white-24:rgba(255, 255, 255, .24);
 $color-white-40:rgba(255, 255, 255, .4);
+$color-white-32: rgba(255,255,255,.32);
+
