--- a/src/styles/components/footer/Footer.module.scss
+++ b/src/styles/components/footer/Footer.module.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 1216px;
+    margin: 0 auto;
     background-color: #100e19;
     hr {
         width: 1216px;
@@ -165,6 +166,7 @@
                     display: flex;
                     text-align: left;
                     vertical-align: baseline;
+                    transition-duration: 0.4s;
                     img {
                         width: 20px;
                         height: 20px;
@@ -220,6 +222,7 @@
                     justify-content: center;
                     align-items: center;
                     cursor: pointer;
+                    transition-duration: 0.4s;
                     img {
                         width: 16px;
                         height: 16px;
