--- a/src/styles/components/reusedСomponents/Button.module.scss
+++ b/src/styles/components/reusedСomponents/Button.module.scss
@@ -11,6 +11,7 @@
   border-radius: 8px;
   margin-top: 20px;
   cursor: pointer;
+  transition-duration: 0.4s;
   &:hover {
     background-color: $color-black-button-hover;
   }
@@ -28,6 +29,11 @@
   cursor: pointer;
   margin-right: 12px;
   z-index: 2;
+  transition-duration: 0.4s;
+  &:hover {
+    background-color: $color-red-button-hover;
+    border-color: $color-red-button-hover;
+  }
 }
 
 .second_content {
@@ -41,7 +47,7 @@
   align-items: center;
   z-index: 2;
   cursor: pointer;
-
+  transition-duration: 0.4s;
   img {
     width: 16px;
     height: 16px;
@@ -60,6 +66,7 @@
   cursor: pointer;
   margin-right: 12px;
   z-index: 2;
+  transition-duration: 0.4s;
   svg {
     color: $color-white-48;
   }
@@ -78,6 +85,7 @@
   border-radius: 8px;
   cursor: pointer;
   z-index: 2;
+  transition-duration: 0.4s;
   svg {
     color: $color-white-48;
   }
@@ -90,32 +98,33 @@
 }
 
 .trailer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color:$color-white-08;
+  background-color: $color-white-08;
   border: none;
   padding: 10px 12px;
   height: 40px;
   border-radius: 8px;
   margin-right: 15px;
   cursor: pointer;
-  transition-duration:.4s;
+  transition-duration: 0.4s;
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    svg {
+      color: $color-white-80;
+      margin-right: 5px;
+    }
 
-  svg {
-    color: $color-white-80;
-    margin-right: 5px;
-  }
-
-  p {
-    color: $color-white-80;
-    font-size: 15px;
-    line-height: 20px;
-    font-weight: 500;
-    font-style: normal;
+    p {
+      color: $color-white-80;
+      font-size: 15px;
+      line-height: 20px;
+      font-weight: 500;
+      font-style: normal;
+    }
   }
   &:hover {
-    background-color:$color-white-16;
+    background-color: $color-white-16;
   }
 }
 
@@ -130,13 +139,13 @@
   border-radius: 8px;
   margin-right: 15px;
   cursor: pointer;
-  transition-duration:.4s;
+  transition-duration: 0.4s;
 
   svg {
     color: $color-white-80;
   }
   &:hover {
-    background-color:$color-white-16;
+    background-color: $color-white-16;
   }
 }
 
@@ -150,12 +159,56 @@
   height: 40px;
   border-radius: 8px;
   cursor: pointer;
-  transition-duration:.4s;
+  transition-duration: 0.4s;
 
   svg {
     color: $color-white-80;
   }
   &:hover {
-    background-color:$color-white-16;
+    background-color: $color-white-16;
+  }
+}
+
+.rating {
+  margin-right: 10px;
+  margin-left: auto;
+  width: 72px;
+  height: 24px;
+  border: 1px solid $color-white-32;
+  border-radius: 6px;
+  padding: 3px 7px;
+  background: none;
+  cursor: pointer;
+  color: $color-white;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 500;
+  font-style: normal;
+  transition-duration: 0.4s;
+  &:hover {
+    border-color: $color-white;
+  }
+}
+
+.allDevices {
+  width: 215px;
+  background-color: $color-red-button;
+  border: 1px solid $color-red-button;
+  transition-duration: 0.4s;
+  height: 40px;
+  border-radius: 8px;
+  padding: 9px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  line-height: 20px;
+  font-weight: 500;
+  font-style: normal;
+  color: $color-white;
+  cursor: pointer;
+  &:hover {
+    background-color: $color-red-button-hover;
+    border-color: $color-red-button-hover;
   }
 }
