--- a/src/styles/pages/MainPage.module.scss
+++ b/src/styles/pages/MainPage.module.scss
@@ -8,6 +8,8 @@
 
 .top10 {
     height: 628px;
+    padding-bottom: 24px;
+    padding-top: 24px;
     &__title {
         display: flex;
         gap: 8px;
