--- a/src/styles/global/colors.scss
+++ b/src/styles/global/colors.scss
@@ -1,16 +1,18 @@
 $color-white: white;
 $color-white-48: rgba(255, 255, 255, 0.48);
 $color-white-72: rgba(255, 255, 255, 0.72);
-$color-black-background:#100e19;
-$color-black-button:#1f1b2e;
-$color-black-button-hover:#2e2844;
-$color-red-button:#ea003d;
-$color-red-button-hover:#ff0f4d;
+$color-black-background: #100e19;
+$color-black-button: #1f1b2e;
+$color-black-button-hover: #2e2844;
+$color-red-button: #ea003d;
+$color-red-button-hover: #ff0f4d;
 $color-frame-background: #100e19;
-$color-white-08:rgba(255,255,255,.08);
-$color-white-16:rgba(255,255,255,.16);
-$color-white-80:rgba(255,255,255,.8);
-$color-white-24:rgba(255, 255, 255, .24);
-$color-white-40:rgba(255, 255, 255, .4);
-$color-white-32: rgba(255,255,255,.32);
-
+$color-white-08: rgba(255, 255, 255, 0.08);
+$color-white-16: rgba(255, 255, 255, 0.16);
+$color-white-80: rgba(255, 255, 255, 0.8);
+$color-white-24: rgba(255, 255, 255, 0.24);
+$color-white-40: rgba(255, 255, 255, 0.4);
+$color-white-32: rgba(255, 255, 255, 0.32);
+$color-black-modal: rgba(7, 5, 14, 0.96);
+$color-gray-modal: #a5a1b2;
+$color-gray-person: #d9d7e0;
