--- a/src/styles/components/movieComponents/CardMovie.module.scss
+++ b/src/styles/components/movieComponents/CardMovie.module.scss
@@ -1,4 +1,5 @@
 @import "../../global/colors.scss";
+
 .card {
   width: 100%;
   padding: 24px 0;
@@ -40,9 +41,12 @@
     line-height: 44px;
     color: $color-white-80;
     margin-top: 8px;
-    margin-bottom: 20px;
     padding: 0 12px;
     text-align: center;
+    &:not(:first-child) {
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
   }
   &_params {
     margin-bottom: 24px;
@@ -223,25 +227,25 @@
       color: $color-white-40;
     }
   }
+
   &_rating {
     width: 100%;
     padding: 0 12px;
-    
-    
-    
-    &_box{
-        background-color: $color-white-08;
-    border-radius: 12px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+
+    &_box {
+      background-color: $color-white-08;
+      border-radius: 12px;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
     }
+
     &_boxNum {
       width: 64px;
       height: 64px;
       background-color: #73a32f;
-      color:$color-white ;
+      color: $color-white;
       border-radius: 8px;
       display: flex;
       align-items: center;
@@ -255,28 +259,148 @@
       text-overflow: ellipsis;
       margin-right: 16px;
     }
-&_boxTitle{
-    font-size: 15px;
-    line-height: 20px;
-    font-weight: 500;
-    font-style: normal;
-    color: $color-white;
+    &_boxTitle {
+      font-size: 15px;
+      line-height: 20px;
+      font-weight: 500;
+      font-style: normal;
+      color: $color-white;
+    }
+    &_boxCaption {
+      font-size: 15px;
+      line-height: 20px;
+      font-weight: 400;
+      font-style: normal;
+      color: $color-white-72;
+      margin-top: 0;
+    }
+    &_boxCounter {
+      font-size: 13px;
+      line-height: 16px;
+      margin-top: 4px;
+      font-weight: 400;
+      font-style: normal;
+      color: $color-white-72;
+    }
+  }
 }
-&_boxCaption{
-    font-size: 15px;
-    line-height: 20px;
-    font-weight: 400;
-    font-style: normal;
-    color: $color-white-72;
-    margin-top: 0;
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+  background-color: $color-black-modal;
 }
-&_boxCounter{
-    font-size: 13px;
-    line-height: 16px;
-    margin-top: 4px;
-    font-weight: 400;
-    font-style: normal;
-    color: $color-white-72;
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+  background-color: $color-black-modal;
 }
+
+.popup {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: $color-gray-modal;
+  svg {
+    position: absolute;
+    transition-duration: 0.4s;
+    top: 32px;
+    right: 32px;
+    width: 30px;
+    height: 30px;
+    z-index: 1002;
+    cursor: pointer;
+    &:hover {
+      color: $color-white;
+    }
+  }
+  &_box {
+    width: 1216px;
+    margin: 0 auto;
+    padding: 48px 0;
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    color: $color-gray-modal;
+    &_content {
+      display: flex;
+      flex-direction: column;
+      margin-left: 25%;
+      padding: 0 12px;
+      width: 50%;
+      min-height: 100%;
+    }
+    &_contentTitle {
+      font-size: 40px;
+      line-height: 44px;
+      font-weight: 900;
+      font-style: normal;
+      color: $color-white;
+    }
+    &_contentSubTitle {
+      margin-top: 12px;
+      font-size: 15px;
+      line-height: 20px;
+      font-weight: 400;
+      font-style: normal;
+      color: $color-gray-modal;
+    }
+    &_contentList {
+      margin-top: 24px;
+      height: 60px;
+      padding: 4px;
+      column-gap: 2px;
+      border-radius: 16px;
+      background-color: $color-black-button;
+      display: flex;
+      align-items: center;
+    }
+    &_contentItem {
+      height: 52px;
+      flex-grow: 1;
+      color: #7e798f;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition-duration: 0.1s;
+      border-radius: 12px;
+      font-size: 20px;
+      line-height: 24px;
+      font-weight: 500;
+      font-style: normal;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+
+      cursor: pointer;
+      &:hover {
+        background-color: $color-red-button-hover;
+        color: $color-white;
+      }
+    }
+    &_contentLabels {
+      height: 16px;
+      margin-top: 12px;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 12px;
+      font-size: 13px;
+      line-height: 16px;
+      font-weight: 400;
+      font-style: normal;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      color: #7e798f;
+    }
   }
 }
