--- a/src/styles/pages/person.module.scss
+++ b/src/styles/pages/person.module.scss
@@ -1,70 +1,20 @@
 @import "../global/colors.scss";
 
-.modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 1;
-  background-color: $color-black-modal;
-}
-.Overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 1;
-  background-color: $color-black-modal;
-}
-.popup {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  color: $color-gray-modal;
-  color: $color-white;
-  &_back {
-    z-index: 1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    margin-top: 32px;
-    height: 52px;
-    padding: 16px;
-    opacity: 0.72;
-    display: flex;
-    align-items: center;
-    &:hover {
-      opacity: 1;
+.container {
+    padding: 0;
+    color: $color-white;
+    width: 100%;
+    &_title {
+        font-size: 20px;
+        line-height: 24px;
+        font-weight: 700;
+        font-style: normal;
+        width: 100%;
+        margin-bottom: 16px;
     }
-    svg {
-      width: 20px;
-      height: 20px;
-      font-size: 20px;
-      line-height: 20px;
-      align-self: center;
-      transition-duration: 0.4s;
+    &_content {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
     }
-    p {
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      font-size: 15px;
-      line-height: 20px;
-      font-weight: 500;
-      font-style: normal;
-      margin-left: 8px;
-      align-self: center;
-      transition-duration: 0.4s;
-    }
-  }
-  &_box {
-    width: 1216px;
-    margin: 0 auto;
-    min-height: 100%;
-    display: flex;
-    align-items: center;
-    color: $color-gray-modal;
-  }
 }
