--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -286,6 +286,27 @@
           }
         }
       }
+      // Код для Drop Меню Уведомлений
+      .header_bell_container {
+        width: 1216px;
+        height: 212px;
+        margin: 0 auto;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        height: 212px;
+        justify-content: center;
+        img {
+          width: 56px;
+          height: 56px
+        }
+        span {
+          color: #a5a1b2;
+          font-size: 15px;
+          font-weight: 400;
+          margin-top: 24px;
+        }
+      }
       // Код для Drop меню авторизации
       .header_cards_container {
         grid-gap: 24px;
@@ -296,6 +317,102 @@
         padding-left: 12px;
         padding-right: 12px;
         width: 66.66666667%;
+        a {
+          transform: translateZ(0);
+          will-change: background-color;
+          background-color: #312b45;
+          border-radius: 8px;
+          box-sizing: content-box;
+          cursor: pointer;
+          min-height: 108px;
+          .header_card_redpoint {
+            position: absolute;
+            right: 8px;
+            top: 8px;
+            box-shadow: 0 2px 8px rgba(234,0,61,.8);
+            background-color: #ea003d;
+            border-radius: 5px;
+            height: 10px;
+            width: 10px;
+          }
+          img {
+            width: 20px;
+            left: 16px;
+            position: absolute;
+            top: 16px;
+          }
+          .header_card_text {
+            width: 146px;
+            left: 16px;
+            position: absolute;
+            right: 16px;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 20px;
+            color: #fff;
+            cursor: pointer;
+            max-height: 60px;
+          }
+          p {
+            display: box;
+            left: 16px;
+            position: absolute;
+            right: 16px;
+            bottom: 16px;
+            font-size: 13px;
+            font-weight: 500;
+            max-height: 16px;
+            color: hsla(0,0%,100%,.48);
+          }
+        }
+        a:hover {
+          background-color: #3e3758;
+        }
+      }
+      .header_authorization_container {
+        padding-left: 12px;
+        padding-right: 12px;
+        width: 33.33333333%;
+        .header_authorization_content {
+          border-left: 1px solid hsla(0,0%,100%,.16);
+          height: 100%;
+          padding-left: 24px;
+          button {
+            width: 100%;
+            background-color: #ea003d;
+            border-color: #ea003d;
+            border-radius: 8px;
+            border-width: 1px;
+            height: 40px;
+            cursor: pointer;
+            color: #fff;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 20px;
+          }
+          button:hover {
+            background-color: #ff0f4d;
+            border-color: #ff0f4d;
+          }
+          .header_authorization_help {
+            margin-top: 152px;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            a {
+              font-size: 15px;
+              line-height: 20px;
+              font-weight: 400;
+              color: rgba(255,255,255,.48);
+            }
+            a:hover {
+              color: #fff;
+            }
+            a:last-child {
+              margin-top: 8px;
+            }
+          }
+        }
       }
       // Код для обычного Drop Меню
       .header_dropdown_genres {
