добавил перевод на страницу фильма

--- a/src/styles/components/header/Header.module.scss
+++ b/src/styles/components/header/Header.module.scss
@@ -354,7 +354,7 @@
             max-height: 60px;
           }
           p {
-            display: box;
+            display: -webkit-box;
             left: 16px;
             position: absolute;
             right: 16px;
