--- a/src/styles/components/movieComponents/CardMovie.module.scss
+++ b/src/styles/components/movieComponents/CardMovie.module.scss
@@ -1,21 +1,13 @@
 @import "../../global/colors.scss";
 
 .card {
-    width: 100%;
-    padding: 24px 0;
-    color: $color-white-80;
+    position: relative;
     &_container {
+        margin-left: -12px;
+        margin-right: -12px;
         padding: 0 12px;
     }
-    &_player {
-        width: 63%;
-        position: sticky;
-        position: -webkit-sticky;
-        top: 32px;
-        display: inline-block;
-        vertical-align: top;
-        padding-right: 32px;
-    }
+
     &_info {
         width: 37%;
         display: inline-block;
@@ -32,13 +24,15 @@
         display: flex;
         align-items: center;
         width: 100%;
-        padding-right: 12px;
+        padding: 0 12px;
         cursor: pointer;
     }
 
     &_title {
-        font-size: 42px;
-        line-height: 44px;
+        font-size: 56px;
+        line-height: 56px;
+        font-weight: 700;
+        font-style: normal;
         color: $color-white-80;
         margin-top: 8px;
         padding: 0 12px;
@@ -51,6 +45,250 @@
     &_params {
         margin-bottom: 24px;
         padding: 0 12px;
+    }
+    &_mobile {
+        &_user_btn {
+            display: flex;
+            width: 100%;
+            padding: 0 12px;
+            cursor: pointer;
+        }
+        &_title {
+            font-size: 56px;
+            line-height: 56px;
+            font-weight: 700;
+            font-style: normal;
+            color: $color-white-80;
+            width: 100%;
+            padding: 0 12px;
+            margin-bottom: 20px;
+            &:not(:first-child) {
+                margin-top: 0;
+                margin-bottom: 20px;
+            }
+        }
+        &_params {
+            padding: 0 12px;
+            margin-bottom: 24px;
+        }
+        &_paramsList {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+
+            &:not(:first-child) {
+                margin-top: 4px;
+            }
+        }
+        &_paramsLink {
+            font-size: 15px;
+            line-height: 20px;
+            font-weight: 400;
+            font-style: normal;
+            color: $color-white-80;
+            cursor: pointer;
+            display: inline;
+            transition-duration: 0.4s;
+
+            &:hover {
+                color: $color-white;
+            }
+        }
+        &_paramsDuration {
+            margin-left: 8px;
+            font-size: 15px;
+            line-height: 20px;
+            font-weight: 400;
+            font-style: normal;
+            color: $color-white-80;
+            display: inline;
+        }
+        &_paramsPoint {
+            margin: 0 5px;
+            border-color: $color-white-80;
+        }
+        &_paramsItem {
+            color: $color-white-80;
+            font-size: 15px;
+            line-height: 20px;
+            font-weight: 400;
+            font-style: normal;
+            display: inline-block;
+            vertical-align: top;
+            p {
+                color: $color-white;
+                font-size: 13px;
+                line-height: 16px;
+                font-weight: 500;
+                background-color: $color-white-16;
+                height: 20px;
+                padding: 2px 6px;
+                box-sizing: border-box;
+                border-radius: 4px;
+                position: relative;
+            }
+
+            svg {
+                margin-left: 8px;
+                margin-right: 4px;
+                color: $color-white-80;
+            }
+        }
+        &_description{
+            &_show {
+                display: none;
+    
+                position: relative;
+                cursor: pointer;
+                font-size: 15px;
+                line-height: 22px;
+                font-weight: 400;
+                font-style: normal;
+                color: $color-white-48;
+                transition-duration: 0.4s;
+                &:hover {
+                    color: $color-white;
+                }
+            }
+            &_hide {
+                display: none;
+                position: relative;
+                cursor: pointer;
+                font-size: 15px;
+                line-height: 22px;
+                font-weight: 400;
+                font-style: normal;
+                color: $color-white-48;
+                transition-duration: 0.4s;
+                &:hover {
+                    color: $color-white;
+                }
+            }
+            &_box{
+                padding: 0 12px;
+                width: 66.66666667%;
+    margin-bottom: 16px;
+   hr{
+    border-color: $color-white-08;
+   }
+            }
+            &_lang{
+                
+                display:flex;
+                align-items:center;
+                justify-content:space-between;
+                &:not(:last-child){
+                    padding-bottom: 12px;
+                }
+                &:not(:first-child){
+                    padding-top: 12px;
+                }
+                p{
+                    font-size: 15px;
+    line-height: 20px;
+    font-weight: 400;
+    font-style: normal;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color:$color-white;
+    &:not(:last-child){
+       color: $color-white-40;
+    }
+                }
+                ul{
+                    display:flex;
+                }
+        }
+        &_item {
+            color: $color-white-80;
+            font-size: 15px;
+            line-height: 20px;
+            font-weight: 400;
+            font-style: normal;
+            display: inline-block;
+            vertical-align: top;
+            &:not(:last-child) {
+                margin-right: 8px;
+            }
+            p {
+                color: $color-white;
+                font-size: 13px;
+                line-height: 16px;
+                font-weight: 500;
+                background-color: $color-white-16;
+                height: 20px;
+                padding: 2px 6px;
+                box-sizing: border-box;
+                border-radius: 4px;
+                position: relative;
+            }
+        }
+        }
+        &_rating {
+            width: 66.66666667%;
+            margin-bottom: 32px;
+            padding: 0 12px;
+    
+            &_box {
+                background-color: $color-white-08;
+                border-radius: 12px;
+                padding: 10px;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+            }
+    
+            &_boxNum {
+                width: 64px;
+                height: 64px;
+                background-color: #73a32f;
+                color: $color-white;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 24px;
+                line-height: 28px;
+                font-weight: 700;
+                font-style: normal;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                margin-right: 16px;
+            }
+            &_boxTitle {
+                font-size: 15px;
+                line-height: 20px;
+                font-weight: 500;
+                font-style: normal;
+                color: $color-white;
+            }
+            &_boxCaption {
+                font-size: 15px;
+                line-height: 20px;
+                font-weight: 400;
+                font-style: normal;
+                color: $color-white-72;
+                margin-top: 0;
+            }
+            &_boxCounter {
+                font-size: 13px;
+                line-height: 16px;
+                margin-top: 4px;
+                font-weight: 400;
+                font-style: normal;
+                color: $color-white-72;
+            }
+        }
+        &_container{
+            display:none;
+            width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 12px;
+    box-sizing:border-box;
+        }
     }
     &_paramsList {
         overflow: hidden;
@@ -124,20 +362,23 @@
         margin-bottom: 24px;
     }
     &_description {
+        
         margin-bottom: 24px;
         padding: 0 12px;
-
+        overflow-wrap: break-word;
+        text-overflow: ellipsis;
+        max-width: 100%;
+        font-size: 15px;
+        line-height: 22px;
+        font-style: normal;
+        font-weight: 400;
         &_hidden {
             display: -webkit-box;
             overflow: hidden;
             -webkit-line-clamp: 8;
             -webkit-box-orient: vertical;
-            text-overflow: ellipsis;
+            width: 100%;
             margin-bottom: 8px;
-            font-size: 15px;
-            line-height: 22px;
-            font-style: normal;
-            font-weight: 400;
             color: $color-white-72;
         }
 
@@ -149,7 +390,7 @@
             font-weight: 400;
             color: $color-white-72;
         }
-        &_show {
+        &_showDetail {
             display: block;
 
             position: relative;
@@ -164,7 +405,7 @@
                 color: $color-white;
             }
         }
-        &_hide {
+        &_hideDetail {
             display: none;
             position: relative;
             cursor: pointer;
@@ -401,6 +642,128 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             color: #7e798f;
+        }
+    }
+}
+
+.header {
+    padding: 0 12px;
+    &_btn {
+        color: $color-white;
+        display: flex;
+        align-items: center;
+        p {
+            font-size: 13px;
+            line-height: 16px;
+            font-weight: 500;
+            font-style: normal;
+            margin-left: 8px;
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    /*  .card{
+        width: 1216px;
+    margin: 0 auto;
+    } */
+}
+@media screen and (min-width: 600px) and (max-width: 1279px) {
+    .card,
+    .header {
+        width: auto;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
+@media screen and (max-width: 1159px) {
+    .card {
+        &_screen {
+            display: none;
+        }
+        &_user_btn {
+            display: none;
+        }
+        &_rating {
+            display: none;
+        }
+        &_description{
+            &_showDetail{
+                display:none;
+            }
+            &_box{
+                display:none;
+            }
+        }
+        &_mobile{
+            &_description{
+                &_show{
+                    display:block;
+                }
+            }
+            &_container{
+                display:block;}
+        }
+    }
+}
+@media screen and (min-width: 1160px) {
+    .card {
+        &_player {
+            width: 62.5%;
+            height: auto;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 32px;
+            display: inline-block;
+            vertical-align: top;
+            padding-right: 32px;
+        }
+        &_mobile {
+            display: none;
+            &_user_btn {
+                display: none;
+            }
+        }
+    }
+    .header {
+        padding-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .card {
+        padding-top: 24px;
+        padding-bottom: 24px;
+
+        &_movie {
+            padding-left: 12px;
+            padding-right: 12px;
+        }
+    }
+    .header {
+        padding-top: 20px;
+    }
+}
+
+@media screen and (min-width: 880px) and (max-width: 1159px) {
+    .card {
+        overflow-x: hidden;
+        &_info {
+            width: 100%;
+            -webkit-column-gap: 40px;
+            -moz-column-gap: 40px;
+            column-gap: 40px;
+            display: grid;
+            grid-auto-columns: 2fr 1fr;
+            grid-template-areas: "fadingContentInfo .";
+        }
+        &_mobile {
+            &_user_btn {
+                display: grid;
+                grid-auto-columns: 1fr 1fr;
+                grid-auto-rows: 1fr 1fr;
+                grid-column-gap: 12px;
+            }
         }
     }
 }
