--- a/src/styles/components/movieComponents/Medallion.module.scss
+++ b/src/styles/components/movieComponents/Medallion.module.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     transition-duration: 0.4s;
+    cursor: pointer;
     &:hover {
         .medallion_box {
             background-color: $color-white-24;
